# cli

./: .dockerignore  .gitignore  BRANCH_STATUS.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.smoke  Dockerfile.test  README.md  TODO.md  appz-cli.code-workspace  biome.json  deny.toml  git-town.toml  justfile  package.json  pnpm-workspace.yaml  run.sh  zipsign.pub
crates/ai/: Cargo.toml
crates/ai-seo/: Cargo.toml
crates/ai-seo/migrations/: 0001_init.sql  0002_pages.sql  0003_issue_definitions.sql  0004_page_issues.sql
crates/ai-seo/src/: aggregation.rs  analyzer.rs  db.rs  diff.rs  fix_plan.rs  format.rs  lib.rs  models.rs  mutation.rs  preview.rs  registry.rs  routing.rs  rules.rs  scoring.rs
crates/ai-seo/src/rules/: capabilities.rs  mod.rs  tier_a_streaming.rs  tier_b_document.rs  tier_c_live.rs  trait.rs
crates/ai-seo/src/utils/: mod.rs  readability.rs
crates/ai/src/: aisdk_client.rs  client.rs  error.rs  lib.rs  parse.rs  types.rs
crates/ai/src/skills/: mod.rs  tool.rs
crates/api/: API_ENDPOINT_RULES.md  Cargo.toml  README.md
crates/api/src/: client.rs  error.rs  lib.rs  models.rs  paths.rs
crates/api/src/endpoints/: aliases.rs  auth.rs  deployments.rs  domains.rs  gen.rs  mod.rs  plugins.rs  projects.rs  teams.rs  users.rs
crates/api/src/http/: error_mapper.rs  response_handler.rs
crates/api/src/middleware/: auth.rs  mod.rs  retry.rs  team.rs  tracing.rs
crates/api/src/model/: types.rs
crates/app/: Cargo.toml
crates/app/src/: app.rs  app_error.rs  appz-cli.code-workspace  args.rs  auth.rs  config.rs  context.rs  ddev_helpers.rs  exec.rs  host.rs  http.rs  importer.rs  lib.rs  log.rs  project.rs  sandbox_helpers.rs  session.rs  shell.rs  ssh.rs  telemetry.rs  tunnel.rs  verify.rs  wp_runtime.rs
crates/app/src/builtin_tasks/: mod.rs
crates/app/src/commands/: blueprint.rs  blueprints.rs  build.rs  check.rs  code.rs  deploy.rs  deployment_utils.rs  dev.rs  dev_server.rs  exec.rs  external.rs  gen.rs  init.rs  inspect.rs  install_helpers.rs  link.rs  list.rs  login.rs  logout.rs  logs.rs  ls.rs  mcp_server.rs  migrate.rs  mod.rs  open.rs  pack.rs  plan.rs  plugin.rs  preview.rs  pull.rs  recipe_validate.rs  remove.rs  run.rs  self_upgrade.rs  self_upgrade_stub.rs  site.rs  site2static.rs  skills.rs  ssg.rs  switch.rs  (+5 more)
crates/app/src/detectors/: README.md  (+3 more)
crates/app/tests/: plugin_isolation.rs
crates/appz-build/: Cargo.toml
crates/appz-build/src/: build.rs  detect.rs  lib.rs  output.rs
crates/appz-build/tests/: detect_test.rs
crates/appz-client/: Cargo.toml
crates/appz-client/src/: deploy.rs  file_tree.rs  lib.rs  upload.rs
crates/appz-server/: Cargo.toml
crates/appz-server-client/: Cargo.toml
crates/appz-server-client/src/: lib.rs
crates/appz-server/src/: control.rs  events.rs  lib.rs  main.rs  process.rs  protocol.rs  proxy.rs  state.rs
crates/appz_pdk/: Cargo.toml  README.md
crates/appz_pdk/src/: lib.rs  macros.rs  plugin_macros.rs  prelude.rs  security.rs  types.rs
crates/blueprint/: Cargo.toml
crates/blueprint/src/: converter.rs  error.rs  executor.rs  generator.rs  lib.rs  runtime.rs  static_export.rs  types.rs
crates/blueprint/tests/: converter_test.rs  parse.rs
crates/checker/: Cargo.toml
crates/checker/src/: cache.rs  config.rs  detect.rs  error.rs  fixer.rs  git.rs  init.rs  lib.rs  output.rs  provider.rs  runner.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  shared.rs
crates/cli/tests/: environments_e2e.rs  open_e2e.rs
crates/code-grep/: Cargo.toml
crates/code-grep/src/: execute.rs  lib.rs  parse.rs  schema.rs  validate.rs
crates/code-mix/: Cargo.toml
crates/code-mix/benches/: cache.rs  prefilter.rs  search.rs  store.rs
crates/code-mix/src/: cache.rs  lib.rs  prefilter.rs  repomix.rs  search.rs  store.rs  templates.rs  types.rs  workspace.rs
crates/code-search/: Cargo.toml
crates/code-search/examples/: README.md  lancedb_embedding_test.rs
crates/code-search/src/: chunk.rs  embed.rs  error.rs  lancedb_store.rs  lib.rs  pack.rs  parse.rs  qdrant.rs  qdrant_startup.rs  types.rs
crates/common/: Cargo.toml  README.md
crates/common/benches/: config.rs
crates/common/src/: consts.rs  env.rs  hardening.rs  head_tail_buffer.rs  id.rs  lib.rs  path.rs  timing.rs  types.rs  user_config.rs
crates/crawl-core/: Cargo.toml
crates/crawl-core/src/: crawler.rs  lib.rs  utils.rs
crates/deployer/: Cargo.toml
crates/deployer/src/: config.rs  detect.rs  error.rs  lib.rs  output.rs  provider.rs  ui.rs
crates/detectors/: Cargo.toml
crates/detectors/src/: detect.rs  languages.rs  lib.rs  testing.rs  tools.rs
crates/dev-server/: Cargo.toml  README.md
crates/dev-server/src/: config.rs  error.rs  lib.rs  server.rs  watcher.rs
crates/frameworks/: .gitignore  Cargo.toml  README.md  build.rs
crates/frameworks/data/: frameworks.json  php-frameworks.json
crates/frameworks/src/: detector_types.rs  frameworks.rs  lib.rs  types.rs
crates/grab/: Cargo.toml
crates/grab/src/: download.rs  error.rs  lib.rs  progress.rs
crates/hypermix/: Cargo.toml
crates/hypermix/src/: add.rs  config.rs  ignore.rs  init.rs  lib.rs  repomix.rs  run.rs  tokens.rs  types.rs  uninstall.rs
crates/init/: Cargo.toml
crates/init/benches/: parse_git.rs
crates/init/src/: blueprint_schema.rs  config.rs  deploy.rs  detect.rs  error.rs  lib.rs  output.rs  provider.rs  registry.rs  run.rs  ui.rs
crates/init/tests/: blueprint_schema_test.rs  detect_test.rs  registry_test.rs  validate_blueprints_test.rs
crates/mcp-server/: Cargo.toml  README.md
crates/mcp-server/src/: auth.rs  lib.rs  main.rs  tools.rs
crates/plugin-build/: Cargo.toml
crates/plugin-build/src/: lib.rs  main.rs  wasm_header.rs
crates/plugin-manager/: Cargo.toml
crates/plugin-manager/src/: cache.rs  downloader.rs  entitlements.rs  error.rs  lib.rs  manifest.rs  security.rs  update_check.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: config.rs  error.rs  json_ops.rs  lib.rs  mise.rs  provider.rs  scoped_fs.rs  toml_ops.rs
crates/site-builder/: Cargo.toml
crates/site-builder/src/: cache.rs  config.rs  error.rs  lib.rs
(+781 files in other folders)
