[workspace]
members = [
    "crates/app",
    "crates/api",
    "crates/cli",
    "crates/command",
    "crates/common",
    "crates/dev-server",
    "crates/env_var",
    "crates/frameworks",
    "crates/task",
    "crates/ui",
    "crates/appz_pdk",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Appz Contributors"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
miette = { version = "5.0", features = ["fancy"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# CLI and UI
clap = { version = "4.5", features = ["derive", "env"] }
inquire = "0.7"
indicatif = "0.17"
atty = "0.2"
shell-words = "1.1"
which = "6.0"

# Utilities
regex = "1.10"
rustc-hash = "1.1"
chrono = { version = "0.4", features = ["serde"] }
starbase_utils = "0.10"
starbase_archive = "0.10"
tempfile = "3.10"
tokio-retry = "0.3"
url = "2.5"
urlencoding = "2.1"

# HTTP and networking
reqwest = { version = "0.12", features = ["json", "gzip", "zstd", "blocking"] }
hyper = "1.3"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
notify = "6.1"
mime_guess = "2.0"
multer = "3.0"
tokio-tungstenite = "0.24"

# WASM and plugins
extism = "1.0"

# SSH
ssh = { package = "ssh-rs", version = "0.12" }

# Concurrency
scc = "2.1"

# Self-update
self_update = { version = "0.42", default-features = false, features = ["rustls", "signatures"] }

