[workspace]
members = [
    "crates/app",
    "crates/ai",
    "crates/api",
    "crates/cli",
    "crates/command",
    "crates/common",
    "crates/dev-server",
    "crates/env_var",
    "crates/frameworks",
    "crates/ssg-migrator",
    "crates/task",
    "crates/ui",
    "crates/appz_pdk", 
    "crates/studio",
    "crates/sandbox",
    "crates/deployer",
    "crates/checker",
    "crates/init",
    "crates/site-builder",
]
resolver = "2"

[package]
name = "appz"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "appz"
path = "crates/cli/src/main.rs"

[dependencies]
app = { path = "crates/app", features = ["self_update"] }
common = { path = "crates/common" }
ui = { path = "crates/ui" }
env_var = { path = "crates/env_var" }
clap = { workspace = true }
miette = { workspace = true }
starbase = "0.10"
starbase_styles = "0.6"
starbase_utils = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"

[features]
default = ["self_update"]
self_update = []

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Appz Contributors"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
miette = { version = "7.0", features = ["fancy"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# CLI and UI
clap = { version = "4.5", features = ["derive", "env"] }
inquire = "0.7"
indicatif = "0.17"
atty = "0.2"
shell-words = "1.1"
which = "6.0"

# Utilities
regex = "1.10"
rustc-hash = "1.1"
chrono = { version = "0.4", features = ["serde"] }
starbase_utils = { version = "0.10", features = ["json"] }
starbase_archive = { version = "0.12.0", features = ["zip-all"] }
tempfile = "3.10"
tokio-retry = "0.3"
url = "2.5"
urlencoding = "2.1"

# HTTP and networking
reqwest = { version = "0.12", features = ["json", "gzip", "zstd", "blocking", "stream"] }
hyper = "1.3"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
notify = "6.1"
mime_guess = "2.0"
multer = "3.0"
tokio-tungstenite = "0.24"

# WASM and plugins
extism = "1.0"

# SSH
ssh = { package = "ssh-rs", version = "0.5.0" }

# Randomness
rand = "0.8"

# Config
toml = "0.8"

# Concurrency
scc = "2.1"

# Self-update
self_update = { version = "0.42", default-features = false, features = ["rustls", "signatures"] }

