[workspace]
members = [
    "crates/app",
    "crates/design",
    "crates/detectors",
    "crates/grab",
    "crates/mcp-server",
    "crates/ai",
    "crates/api",
    "crates/cli",
    "crates/command",
    "crates/common",
    "crates/dev-server",
    "crates/env_var",
    "crates/frameworks",
    "crates/ssg-migrator",
    "crates/task",
    "crates/tui",
    "crates/ui",
    "crates/appz_pdk",
    "crates/studio",
    "crates/sandbox",
    "crates/deployer",
    "crates/checker",
    "crates/init",
    "crates/site-builder",
    "crates/skills",
    "crates/plugin-manager",
    "crates/wp2md",
    "crates/code-search",
    "crates/code-mix",
    "crates/crawl-core",
    "crates/plugins/ssg-migrator",
    "crates/plugins/check",
    "crates/plugins/site",
    "crates/plugins/wp2md",
    "crates/plugins/crawl",
    "crates/plugin-build",
]
resolver = "2"

[package]
name = "appz"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "appz"
path = "crates/cli/src/main.rs"

[dependencies]
# Fast allocator for allocation-heavy paths (M-MIMALLOC-APPS).
mimalloc = "0.1"
app = { path = "crates/app", default-features = false }
common = { path = "crates/common" }
ui = { path = "crates/ui" }
env_var = { path = "crates/env_var" }
plugin-manager = { path = "crates/plugin-manager" }
sandbox = { path = "crates/sandbox" }
api = { path = "crates/api" }
clap = { workspace = true }
miette = { workspace = true }
serde_json = { workspace = true }
starbase = { workspace = true }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"

[features]
default = ["full"]

# Build with all bundled modules. Plugin-only features (check, site)
# are excluded — those plugins work via the External command handler.
# Note: migrate has been removed entirely — the ssg-migrator plugin is
# self-contained and no longer needs host-side migration code.
full = ["dev-server", "deploy", "mcp", "gen", "self_update"]

# Individual feature flags — forwarded to the `app` crate.
dev-server = ["app/dev-server"]
deploy = ["app/deploy"]
check = ["app/check"]
site = ["app/site"]
mcp = ["app/mcp"]
gen = ["app/gen"]
self_update = ["app/self_update"]
# Semantic search MCP tools (code_index, code_search) — optional for mcp-server
code-search = ["app/code-search"]
tui = ["app/tui", "ui/tui"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Appz Contributors"]

# Release profile: LTO and panic=abort for smaller, faster binaries.
# See: https://gist.github.com/jFransham/369a86eff00e5f280ed25121454acec1
[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
incremental = true  # default
opt-level = 0
codegen-units = 256
debug = true

# Benchmark profile: debug symbols for profiling (perf, VTune, Superluminal).
[profile.bench]
inherits = "release"
debug = 1

# Profile for WASM plugin builds: smaller output, DCE-friendly.
# Use with: cargo build --profile release-wasm --target wasm32-wasip1 -p <plugin>
[profile.release-wasm]
inherits = "release"
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization (slower build)
panic = "abort"     # Smaller binary, no panic unwinding
strip = "debuginfo" # Strip debug symbols

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
miette = { version = "7.0", features = ["fancy"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }

# CLI and UI
clap = { version = "4.5", features = ["derive", "env"] }
inquire = "0.9"
indicatif = "0.18"
atty = "0.2"
shell-words = "1.1"
which = "8.0"

# Utilities
regex = "1.10"
rustc-hash = "2.1"
chrono = { version = "0.4", features = ["serde"] }
# Align starbase_utils 0.12 with starbase_archive (eliminates duplicate starbase_utils)
starbase = "0.10"
starbase_styles = "0.6"
starbase_utils = { version = "0.12", features = ["json", "glob"] }
starbase_archive = { version = "0.12", features = ["zip-all"] }
tempfile = "3.10"
tokio-retry = "0.3"
url = "2.5"
urlencoding = "2.1"

# HTTP and networking
reqwest = { version = "0.13", features = ["json", "gzip", "zstd", "blocking", "stream"] }
reqwest-middleware = "0.5"
hyper = "1.3"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
notify = "8.2"
mime_guess = "2.0"
multer = "3.0"
tokio-tungstenite = "0.28"

# WASM and plugins
extism = "1.0"

# SSH
ssh = { package = "ssh-rs", version = "0.5.0" }

# Randomness
rand = "0.8"
uuid = { version = "1.10", features = ["v4"] }

# Config
toml = "0.8"

# Concurrency
scc = "3.6"

# Self-update
self_update = { version = "0.42", default-features = false, features = ["rustls", "signatures"] }

# MCP
rmcp = { version = "0.15", default-features = false, features = ["server", "transport-io", "schemars", "macros"] }
