
[package]
name = "ai_seo"
version = "0.3.0"
edition = "2021"

[lib]
name = "ai_seo"
path = "src/lib.rs"

[dependencies]
lol_html = "2.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { workspace = true }
blake3 = "1.8.2"
chrono = { version = "0.4", features = ["serde"] }
bitflags = "2.0"
url = "2.5"
starbase_styles = "0.6.5"
owo-colors = "4.2"
rayon = "1.8"
bitvec = "1.0"
smallvec = "1.11"
