[package]
name = "api"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[dependencies]
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
reqwest = { workspace = true, features = ["json"] }
reqwest-middleware = { workspace = true }
anyhow = "1.0"
async-trait = "0.1"
http = "1.1"
url = "2.5"
urlencoding = "2.1"

