[package]
name = "app"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
inquire = { workspace = true }
which = { workspace = true }
shell-words = { workspace = true }
starbase_utils = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
itertools = "0.13"
walkdir = "2"
task = { path = "../task" }
command = { path = "../command" }
frameworks = { path = "../frameworks" }
env_var = { path = "../env_var" }
async-trait = "0.1"
tokio = { workspace = true, features = ["process"] }
tokio-util = { workspace = true }
futures = { workspace = true }
extism = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, features = ["json", "gzip", "zstd", "blocking"] }
ssh = { package = "ssh-rs", workspace = true }
starbase = "0.10"
starbase_styles = "0.6"
starbase_events = "0.7"
starbase_shell = "0.10"
tracing = "0.1"
api = { path = "../api" }
ui = { path = "../ui" }
common = { path = "../common" }
atty = { workspace = true }
starbase_archive = { workspace = true }
dev-server = { path = "../dev-server" }
tempfile = { workspace = true }
tokio-retry = { workspace = true }
url = { workspace = true }
indicatif = { workspace = true }
self_update = { workspace = true, optional = true }
webbrowser = "1.0"
toml = "0.8"
camino = "1.2"
appz-studio = { path = "../studio" }
sandbox = { path = "../sandbox" }
plugin-manager = { path = "../plugin-manager" }
deployer = { path = "../deployer" }
checker = { path = "../checker" }
init = { path = "../init" }
site-builder = { path = "../site-builder" }

[features]
default = ["self_update"]

