[package]
name = "appz_pdk"
version = "0.1.0"
edition = "2021"
authors = ["saasctl contributors"]
description = "Plugin Development Kit for saasctl WASM plugins"
license.workspace = true
repository = "https://github.com/saasctl/saasctl"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
extism-pdk = "1.4.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

[dev-dependencies]
# Add test utilities if needed

