[package]
name = "blueprint"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
which = { workspace = true }
