[package]
name = "blueprint"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
site2static = { path = "../site2static" }
thiserror = { workspace = true }
tracing = "0.1"
url = { workspace = true }
which = { workspace = true }
