[package]
name = "checker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Universal code checker with auto-fix and AI-assisted repair"

[dependencies]
ai = { path = "../ai" }
sandbox = { path = "../sandbox" }
command = { path = "../command" }
common = { path = "../common" }
ui = { path = "../ui" }
frameworks = { workspace = true }
async-trait = "0.1"
miette = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
rayon = "1.8"
rustc-hash = { workspace = true }
glob = "0.3"
similar = "2.6"
which = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
