[package]
name = "code-grep"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe ripgrep execution for code search (no shell, no flag injection)"
publish = false

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
wait-timeout = "0.2"
