[package]
name = "code-search"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Semantic code search using Repomix and Qdrant"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
sandbox = { path = "../sandbox" }
fastembed = { version = "5", default-features = false, features = ["hf-hub", "ort-download-binaries-native-tls"] }
qdrant-client = "1.16"
tokio = { workspace = true, features = ["process", "fs", "net"] }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
which = { workspace = true }
starbase_utils = { workspace = true, features = ["json"] }
rustc-hash = { workspace = true }
chrono = { workspace = true }
tracing = "0.1"
