[package]
name = "code-search"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Semantic code search using Repomix and LanceDB"
publish = false

[lib]
path = "src/lib.rs"

[[example]]
name = "lancedb_embedding_test"
path = "examples/lancedb_embedding_test.rs"
required-features = ["lancedb-embedding-test"]

[features]
default = ["lancedb"]

# LanceDB backend (default): embedded vector store with sentence-transformers
lancedb = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema", "dep:futures-util"]

# Qdrant backend: fastembed + Qdrant (opt-in)
qdrant = ["dep:fastembed", "dep:qdrant-client"]

# Example-only deps
lancedb-embedding-test = ["lancedb", "dep:tempfile", "dep:tracing-subscriber"]

[dependencies]
sandbox = { path = "../sandbox" }
fastembed = { version = "5", optional = true, default-features = false, features = ["hf-hub", "ort-download-binaries-native-tls"] }
qdrant-client = { version = "1.16", optional = true }
lancedb = { version = "0.26", optional = true, features = ["sentence-transformers"] }
arrow-array = { version = "57", optional = true }
arrow-schema = { version = "57", optional = true }
tempfile = { version = "3", optional = true }
tracing-subscriber = { version = "0.3", optional = true, default-features = false, features = ["env-filter", "fmt"] }
futures-util = { version = "0.3", optional = true }
tokio = { workspace = true, features = ["process", "fs", "net"] }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
which = { workspace = true }
starbase_utils = { workspace = true, features = ["json"] }
rustc-hash = { workspace = true }
chrono = { workspace = true }
tracing = "0.1"
