[package]
name = "common"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[dependencies]
dirs = "6.0"
libc = "0.2"
miette = { workspace = true }
relative-path = { version = "2.0", features = ["serde"] }
regex = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

