[package]
name = "deployer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Universal deployment provider for static site hosting platforms"

[dependencies]
sandbox = { path = "../sandbox" }
command = { path = "../command" }
common = { path = "../common" }
ui = { path = "../ui" }
env_var = { path = "../env_var" }
async-trait = "0.1"
miette = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
