[package]
name = "detectors"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Project detection: frameworks, package manager, languages, tools, testing"

[dependencies]
async-trait = "0.1"
frameworks = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
starbase_utils = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
