[package]
name = "dev-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
notify = { workspace = true }
mime_guess = { workspace = true }
multer = { workspace = true }
tokio-tungstenite = { workspace = true }
urlencoding = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
futures = { workspace = true }
futures-util = { workspace = true }

