[package]
name = "frameworks"
version = "0.1.0"
edition = "2021"
license.workspace = true

[build-dependencies]
serde_json = "1.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
thiserror = { workspace = true }
phf = { version = "0.13", features = ["macros"] }

