[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP server exposing appz CLI commands as tools"
license = "MIT"

[lib]
name = "mcp_server"
path = "src/lib.rs"

[[bin]]
name = "appz-mcp-server"
path = "src/main.rs"

[dependencies]
rmcp = { workspace = true, default-features = false, features = [
    "server",
    "transport-io",
    "schemars",
    "macros",
] }
tokio = { workspace = true }
sandbox = { path = "../sandbox" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { version = "0.8", features = ["derive"] }
which = "6.0"
