[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP server exposing appz CLI commands as tools"
license.workspace = true

[lib]
name = "mcp_server"
path = "src/lib.rs"

[[bin]]
name = "appz-mcp-server"
path = "src/main.rs"

[features]
default = []
code-search = ["dep:code-search"]

[dependencies]
rmcp = { workspace = true, default-features = false, features = [
    "server",
    "transport-io",
    "schemars",
    "macros",
] }
tokio = { workspace = true }
sandbox = { path = "../sandbox" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { version = "0.8", features = ["derive"] }
which = { workspace = true }
code-grep = { path = "../code-grep" }
code-mix = { path = "../code-mix" }
code-search = { path = "../code-search", optional = true }
